--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/kinhunt/youtube-proxy#readme",
   "dependencies": {
     "express": "^4.15.3",
+    "http-proxy": "^1.16.2",
     "node-http-proxy": "^0.2.3",
     "ytdl-core": "^0.14.1"
   }
